lein is faster than uberjar