@@ -1,10 +1,7 @@
-#FROM openjdk:21 - works twice slower
 FROM ghcr.io/graalvm/graalvm-community:21
-COPY target/uberjar/app.jar ./
-COPY binance.config.edn ./
-COPY gcp.json ./
+COPY . .
 ENV GOOGLE_APPLICATION_CREDENTIALS=./gcp.json
-CMD ["java", "-XX:+UseZGC", "-jar", "app.jar", "-d"]
+CMD ["./lein", "run", "-d"]
 
 # docker build -t neusa .
 # docker tag neusa asia-northeast1-docker.pkg.dev/neusa-a919b/neusa/neusa-hft:latest
